--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,8 @@ jobs:
       - uses: ruby/setup-ruby@v1
         with:
           bundler-cache: true
+      - name: Run rubocop
+        run: bundle exec rubocop
       - name: Run tests
         run: bundle exec rspec
         env:
